stoat/src/snapshots/tui/stoat__test_harness__snapshot_open_rust_file_with_fold.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: fold
focused: #1 of 1
mode: normal
size: 40x8
---
[0m[1m[7m[34mf[0m[1m[34mn[0m[97m [0m[33ma[0m[37m()[0m[97m [0m[37m{[0m[97m [0m[35m1[0m[97m [0m[37m}[0m
[0m[1m[34mfn[0m[97m [0m[33mb[0m[37m()[0m[97m ...[0m
[0m[97m [0m[37m}[0m




[0m[1m[30m[44m NOR [0m[1m[97m[100m (unnamed) [0m[97m[100mfolded.rs           1:1 [0m
