stoat/src/snapshots/tui/stoat__test_harness__snapshot_word_backward.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: b
focused: #1 of 1
mode: normal
size: 30x5
---
[0m[36m┌────────────────────────────┐[0m
[0m[36m│foo [0m[7m[36mb[0m[36m[100mar [0m[36mbaz[0m                 [0m[36m│[0m
[0m[36m│[0m                            [0m[36m│[0m
[0m[36m│[0m                            [0m[36m│[0m
[0m[36m└────────────────────────────┘[0m
