stoat/src/snapshots/tui/stoat__test_harness__snapshot_word_end_styled.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: e
focused: #1 of 1
mode: normal
size: 30x5
---
[0m[36m┌────────────────────────────┐[0m
[0m[36m│[0m[36m[100mfo[0m[7m[36mo[0m[36m bar baz[0m                 [0m[36m│[0m
[0m[36m│[0m                            [0m[36m│[0m
[0m[36m│[0m                            [0m[36m│[0m
[0m[36m└────────────────────────────┘[0m
