stoat/src/snapshots/tui/stoat__test_harness__snapshot_word_forward_repeated.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: w
focused: #1 of 1
mode: normal
size: 30x5
---
[0m[97mfoo[0m[97m[100m bar[0m[7m[97m [0m[97mbaz[0m



[0m[1m[30m[44m NOR [0m[1m[97m[100m (unnamed) [0m[97m[100ms.txt     1:8 [0m
