stoat/src/snapshots/tui/stoat__test_harness__snapshot_word_forward_repeated_styled.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: w
focused: #1 of 1
mode: normal
size: 30x5
---
[0m[36m┌────────────────────────────┐[0m
[0m[36m│foo[0m[36m[100m bar[0m[7m[36m [0m[36mbaz[0m                 [0m[36m│[0m
[0m[36m│[0m                            [0m[36m│[0m
[0m[36m│[0m                            [0m[36m│[0m
[0m[36m└────────────────────────────┘[0m
