stoat/src/snapshots/tui/stoat__test_harness__space_mode.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: space
focused: #1 of 1
mode: space
size: 80x24
---
[0m[36m┌──────────────────────────────────────────────────────────────────────────────┐[0m
[0m[36m│[0m[7m [0m                                                                             [0m[36m│[0m
[0m[36m│[0m                                                                              [0m[36m│[0m
[0m[36m│[0m                                                                              [0m[36m│[0m
[0m[36m│[0m                                                                              [0m[36m│[0m
[0m[36m│[0m                                                                              [0m[36m│[0m
[0m[36m│[0m                                                                              [0m[36m│[0m
[0m[36m│[0m                                                                              [0m[36m│[0m
[0m[36m│[0m                                                                              [0m[36m│[0m
[0m[36m│[0m                                                                              [0m[36m│[0m
[0m[36m│[0m                                                                              [0m[36m│[0m
[0m[36m│[0m                                               [0m[33m┌ space ───────────────────────┐[0m
[0m[36m│[0m                                               [0m[33m│[0m[36m  ?[0m[97m   open the help modal[0m     [0m[33m│[0m
[0m[36m│[0m                                               [0m[33m│[0m[36mEsc[0m[97m   normal mode[0m             [0m[33m│[0m
[0m[36m│[0m                                               [0m[33m│[0m[36m  q[0m[97m   exit stoat[0m              [0m[33m│[0m
[0m[36m│[0m                                               [0m[33m│[0m[36m  s[0m[97m   space_split mode[0m        [0m[33m│[0m
[0m[36m│[0m                                               [0m[33m│[0m[36m  t[0m[97m   open terminal[0m           [0m[33m│[0m
[0m[36m│[0m                                               [0m[33m│[0m[36m  c[0m[97m   claude mode[0m             [0m[33m│[0m
[0m[36m│[0m                                               [0m[33m│[0m[36m  h[0m[97m   focus pane left[0m         [0m[33m│[0m
[0m[36m│[0m                                               [0m[33m│[0m[36m  j[0m[97m   focus pane down[0m         [0m[33m│[0m
[0m[36m│[0m                                               [0m[33m│[0m[36m  k[0m[97m   focus pane up[0m           [0m[33m│[0m
[0m[36m│[0m                                               [0m[33m│[0m[36m  l[0m[97m   focus pane right[0m        [0m[33m│[0m
[0m[36m│[0m                                               [0m[33m│[0m[36m  :[0m[97m   open the command palette[0m[33m│[0m
[0m[36m└───────────────────────────────────────────────[0m[33m└──────────────────────────────┘[0m
