stoat/src/snapshots/tui/stoat__test_harness__split_right.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: r
focused: #2 of 2
mode: normal
size: 80x24
---
[0m[90m┌─────────────────────────────────────┐[0m [0m[36m┌──────────────────────────────────────┐[0m
[0m[90m│[0m                                     [0m[90m│[0m [0m[36m│[0m[7m [0m                                     [0m[36m│[0m
[0m[90m│[0m                                     [0m[90m│[0m [0m[36m│[0m                                      [0m[36m│[0m
[0m[90m│[0m                                     [0m[90m│[0m [0m[36m│[0m                                      [0m[36m│[0m
[0m[90m│[0m                                     [0m[90m│[0m [0m[36m│[0m                                      [0m[36m│[0m
[0m[90m│[0m                                     [0m[90m│[0m [0m[36m│[0m                                      [0m[36m│[0m
[0m[90m│[0m                                     [0m[90m│[0m [0m[36m│[0m                                      [0m[36m│[0m
[0m[90m│[0m                                     [0m[90m│[0m [0m[36m│[0m                                      [0m[36m│[0m
[0m[90m│[0m                                     [0m[90m│[0m [0m[36m│[0m                                      [0m[36m│[0m
[0m[90m│[0m                                     [0m[90m│[0m [0m[36m│[0m                                      [0m[36m│[0m
[0m[90m│[0m                                     [0m[90m│[0m [0m[36m│[0m                                      [0m[36m│[0m
[0m[90m│[0m                                     [0m[90m│[0m [0m[36m│[0m                                      [0m[36m│[0m
[0m[90m│[0m                                     [0m[90m│[0m [0m[36m│[0m                                      [0m[36m│[0m
[0m[90m│[0m                                     [0m[90m│[0m [0m[36m│[0m                                      [0m[36m│[0m
[0m[90m│[0m                                     [0m[90m│[0m [0m[36m│[0m                                      [0m[36m│[0m
[0m[90m│[0m                                     [0m[90m│[0m [0m[36m│[0m                                      [0m[36m│[0m
[0m[90m│[0m                                     [0m[90m│[0m [0m[36m│[0m                                      [0m[36m│[0m
[0m[90m│[0m                                     [0m[90m│[0m [0m[36m│[0m                                      [0m[36m│[0m
[0m[90m│[0m                                     [0m[90m│[0m [0m[36m│[0m                                      [0m[36m│[0m
[0m[90m│[0m                                     [0m[90m│[0m [0m[36m│[0m                                      [0m[36m│[0m
[0m[90m│[0m                                     [0m[90m│[0m [0m[36m│[0m                                      [0m[36m│[0m
[0m[90m│[0m                                     [0m[90m│[0m [0m[36m│[0m                                      [0m[36m│[0m
[0m[90m│[0m                                     [0m[90m│[0m [0m[36m│[0m                                      [0m[36m│[0m
[0m[90m└─────────────────────────────────────┘[0m [0m[36m└──────────────────────────────────────┘[0m
